@@ -18,6 +18,8 @@ Version 1.5
   * Nemerle (#667)
   * F# (#353)
 
+- In the LaTeX formatter, escape special &, < and > chars (#648).
+
 - Enhancements to the Squid conf lexer (#664).
 
 - Several fixes to the reStructuredText lexer (#636).
